fixing further content

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2883,18 +2883,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_millet_system_description_button_tt_desc_hide:0 "Selecting this decision will hide descriptions for on-map tooltips."
  TUR_millet_system_onmap_tt:0 "On-Map Tooltip"
  TUR_millet_system_description_tt:0 "On-Map Description"
- TUR_armenian_minority_name:0 "£ww1_flag_ARM  Armenian Minority"
- TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
- TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Minority"
- TUR_jewish_minority_name:0 "£ww1_flag_ISR  Jewish Minority"
- TUR_south_slavic_minority_name:0 "£ww1_game_rule_flag_YUG  South Slavic Minority"
- TUR_albanian_minority_name:0 "£ww1_flag_ALB  Albanian Minority"
- TUR_kurdish_minority_name:0 "£ww1_flag_KUR  Kurdish Minority"
- TUR_assyrian_minority_name:0 "£ww1_flag_ASY  Assyrian Minority"
- TUR_georgian_minority_name:0 "£ww1_flag_GEO  Georgian Minority"
- TUR_romanian_minority_name:0 "£ww1_flag_ROM  Romanian Minority"
- TUR_turkish_minority_name:0 "£ww1_flag_TUR  Turkish Minority"
- TUR_azerbaijani_minority_name:0 "£ww1_flag_AZR  Azerbaijani Minority"
+ TUR_armenian_minority_name:0 "£ww1_flag_ARM  Armenian Population"
+ TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Population"
+ TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Population"
+ TUR_jewish_minority_name:0 "£ww1_flag_ISR  Jewish Population"
+ TUR_south_slavic_minority_name:0 "£ww1_game_rule_flag_YUG  South Slavic Population"
+ TUR_albanian_minority_name:0 "£ww1_flag_ALB  Albanian Population"
+ TUR_kurdish_minority_name:0 "£ww1_flag_KUR  Kurdish Population"
+ TUR_assyrian_minority_name:0 "£ww1_flag_ASY  Assyrian Population"
+ TUR_georgian_minority_name:0 "£ww1_flag_GEO  Georgian Population"
+ TUR_romanian_minority_name:0 "£ww1_flag_ROM  Romanian Population"
+ TUR_turkish_minority_name:0 "£ww1_flag_TUR  Turkish Population"
+ TUR_azerbaijani_minority_name:0 "£ww1_flag_AZR  Azerbaijani Population"
 
  TUR_no_vilayet_desc:0 "§W----------------------------§!"
  TUR_konstantiniyye_vilayet:0 "Konstantiniyye Vilayet"
@@ -5240,11 +5240,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
  TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n"
  TUR_conscription_in_karak_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n"
- TUR_increase_damascus_centralization_5:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+5%§!"
+ TUR_increase_damascus_centralization_5:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+5%§!\n"
  TUR_truce_with_asir:0 "Truce With Asir"
  TUR_truce_with_asir_desc:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. As foreign wars seem imminent, we may have to have truce with them."
  TUR_truce_with_asir_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-80%§!\n"
- TUR_decrease_yemen_centralization_5:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §R-5%§!"
+ TUR_decrease_yemen_centralization_5:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §R-5%§!\n"
  TUR_establish_order_in_macedonia:0 "Esrablish Order in [FROM.GetName]"
  TUR_establish_order_in_macedonia_desc:0 "[FROM.GetName] in the Macedonian region has been experiencing violence among Greek, Bulgarian and Turkish residents. By deploying the army in the region, we can combat violence and establish order."
  TUR_establish_order_in_macedonia_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\nModify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n\n"
@@ -5265,10 +5265,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_centralize_albania_decision:0 "Centralize [FROM.GetName]"
  TUR_centralize_albania_decision_desc:0 "Thanks to its Muslim population, Albania stands as a stronghold as Ottoman rule in the Western Balkans. Yet the region still remains rather away from our total reach. By increasing centralization , Albanian vilayets can become a part of yet another Ottoman province."
  TUR_centralize_albania_decision_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n"
- TUR_increase_kosova_centralization_2:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+2%§!"
- TUR_increase_manastir_centralization_2:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+2%§!"
- TUR_increase_yanya_centralization_2:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+2%§!"
- TUR_increase_iskodra_centralization_2:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+2%§!"
+ TUR_increase_kosova_centralization_2:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+2%§!\n"
+ TUR_increase_manastir_centralization_2:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+2%§!\n"
+ TUR_increase_yanya_centralization_2:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+2%§!\n"
+ TUR_increase_iskodra_centralization_2:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+2%§!\n"
  TUR_decision_cost_300_infantry_equipment:0 "£infantry_equipment_text_icon §Y300§!"
  TUR_decision_cost_300_infantry_equipment_blocked:0 "£infantry_equipment_text_icon §R300§!"
  TUR_improve_albanian_garrisons_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n"
@@ -5278,12 +5278,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_improve_albanian_garrisons_tt3:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G-5%§!\n"
  TUR_combat_rebels_in_ahikerya:0 "Combat Rebels in [975.GetName]"
  TUR_combat_rebels_in_ahikerya_desc:0 "Though our rule has always been unpopular, the recent Greek revolt in [975.GetName] has been unexpected. While the force rebelling force of the army is nothing compared to the might of our empşre, it'll take some time to totally surpress it due to the logistical limitations."
- TUR_combat_rebels_in_ahikerya_tt:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+30.0%§!\n"
- TUR_combat_rebels_in_ahikerya_tt2:0 "Modify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
- TUR_combat_rebels_in_ahikerya_tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
+ TUR_combat_rebels_in_ahikerya_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §R+30.0%§!\n"
+ TUR_combat_rebels_in_ahikerya_tt2:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
+ TUR_combat_rebels_in_ahikerya_tt3:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
  TUR_grant_autonomy_to_ahikerya:0 "Grant Autonomy to [975.GetName]"
  TUR_grant_autonomy_to_ahikerya_desc:0 "The recent Greek revolt in [975.GetName] has tightened our hands. Due to the georgaphical limitations, simply taking down the rebellion would take too much time. Simply granting the island autonomy would solve the problem."
- TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
+ TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
 
 
 
@@ -5401,8 +5401,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
  TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
  TUR_minority_stability_war_support_down_yes:0 "\nModify State's Modification to §YSeparatist Sentiments§! by\n"
- TUR_integrate_syrian_vilayets:0 "Integrate [FROM.GetName]"
- TUR_integrate_syrian_vilayets_desc:0 "While Syrian vilayets have been an integral part of our empire for centuries, there are still some parts of these vilayets that doesnt recognize our legitimate rule. If we manage to increase popularity of our rule in these vilayets, we can easily integrate them."
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
@@ -5447,33 +5445,47 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_disband_prisoner_conscripts_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
- TUR_nationalize_greek_businesses_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
+ TUR_nationalize_greek_businesses_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
+ TUR_increase_konstantiniyye_centralization_1:0 "Modify §YCentralization§! of §YKonstantiniyye Vilayet§! by §G+1%§!\n"
+ TUR_increase_catalca_centralization_1:0 "Modify §YCentralization§! of §YÇatalca Vilayet§! by §G+1%§!\n"
+ TUR_increase_izmit_centralization_1:0 "Modify §YCentralization§! of §Yİzmit Vilayet§! by §G+1%§!\n"
+ TUR_increase_edirne_centralization_1:0 "Modify §YCentralization§! of §YEdirne Vilayet§! by §G+1%§!\n"
+ TUR_increase_selanik_centralization_1:0 "Modify §YCentralization§! of §YSelanik Vilayet§! by §G+1%§!\n"
+ TUR_increase_manastir_centralization_1:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+1%§!\n"
+ TUR_increase_yanya_centralization_1:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+1%§!\n"
+ TUR_increase_thessaly_centralization_1:0 "Modify §YCentralization§! of §YThessaly Vilayet§! by §G+1%§!\n"
+ TUR_increase_attika_centralization_1:0 "Modify §YCentralization§! of §YAttika Vilayet§! by §G+1%§!\n"
+ TUR_increase_crete_centralization_1:0 "Modify §YCentralization§! of §YCrete Vilayet§! by §G+1%§!\n"
+ TUR_increase_archipelago_centralization_1:0 "Modify §YCentralization§! of §YArchipelago Vilayet§! by §G+1%§!\n"
+ TUR_increase_biga_centralization_1:0 "Modify §YCentralization§! of §YBiga Vilayet§! by §G+1%§!\n"
+ TUR_increase_hudavendigar_centralization_1:0 "Modify §YCentralization§! of §YHüdavendigar Vilayet§! by §G+1%§!\n"
+ TUR_increase_aydin_centralization_1:0 "Modify §YCentralization§! of §YAydın Vilayet§! by §G+1%§!\n"
+ TUR_increase_sivas_centralization_1:0 "Modify §YCentralization§! of §YSivas Vilayet§! by §G+1%§!\n"
+ TUR_increase_trabzon_centralization_1:0 "Modify §YCentralization§! of §YTrabzon Vilayet§! by §G+1%§!\n"
  TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
  TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
  TUR_increased_pressure_on_bulgarians:0 "Increase Pressure on Bulgarians in [FROM.GetName]"
  TUR_increased_pressure_on_bulgarians_desc:0 "As their nation state has recently gained their independence, many Bulgarians within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
- TUR_increased_pressure_on_bulgarians_tt:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n"
+ TUR_increased_pressure_on_bulgarians_tt:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n£garrison_texticon  Required Garrisons: §R+5%§!\n\n"
+ TUR_increase_edirne_centralization_1:0 "Modify §YCentralization§! of §YEdirne Vilayet§! by §G+1%§!\n"
+ TUR_increase_selanik_centralization_1:0 "Modify §YCentralization§! of §YSelanik Vilayet§! by §G+1%§!\n"
+ TUR_increase_manastir_centralization_1:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+1%§!\n"
  TUR_increased_pressure_on_serbs:0 "Increase Pressure on Serbs in [FROM.GetName]"
- TUR_increased_pressure_on_serbs:0 "As their nation state has recently gained their independence, many Serbs within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
+ TUR_increased_pressure_on_serbs_desc:0 "As their nation state has recently gained their independence, many Serbs within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
+ TUR_increase_kosova_centralization_1:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+1%§!\n"
  TUR_destroy_bulgarians:0 "Destroy Bulgarians in [FROM.GetName]"
  TUR_destroy_bulgarians_desc:0 "There are several towns and villages that accompany a large Bulgarian population in [FROM.GetName]. By destroying their existance in the state, we can create an ethnically homogenious society."
  TUR_clash_against_armenian_gangs:0 "Clash Against Armenian Gangs in [FROM.GetName]"
  TUR_clash_against_armenian_gangs_desc:0 "Armenian gangs have been taking up arms in order to defend themselves ever since the tyranical rule of Abdulhamid II. Though their situation is improving, their habit of takign up arms still remain. We must combat against these groups to secure state authority."
- TUR_clash_against_armenian_gangs_tt:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
- TUR_clash_against_armenian_gangs_tt2:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
+ TUR_clash_against_armenian_gangs_tt:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
+ TUR_clash_against_armenian_gangs_tt2:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
  TUR_usurp_assyrian_properties:0 "Usurp Assyrian Properties"
  TUR_usurp_assyrian_properties_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
- TUR_usurp_assyrian_properties_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
+ TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
- TUR_lift_the_mutasarrifate_of_catalca:0 "Lift the Mutasarrifate of Çatalca"
- TUR_lift_the_mutasarrifate_of_catalca_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of Konstantiniyye. Under our centralization efforts, we'll lift this special status of Çatalca and make it a yet again Ottoman vilayet."
- TUR_lift_the_mutasarrifate_of_izmit:0 "Lift the Mutasarrifate of İzmit"
- TUR_lift_the_mutasarrifate_of_izmit_desc:0 "Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of İzmit and make it a yet again Ottoman vilayet."
- TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
- TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Archipelago. Under our centralization efforts, we'll lift this special status of Biga and make it a yet again Ottoman vilayet."
  TUR_occupy_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
  TUR_occupy_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
  TUR_occupy_mount_lebanon_mutasarrifate_tt:0 "Replace §YAutonomous Mutasarrifate§! with §YAutonomous Vilayet§!\nEffective change:\n"
