--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3320,7 +3320,7 @@ TUN_italian_minority:0 "Italian Minority"
  ww1_ikaria.1.t: "Ikarian Greek Revolt"
  ww1_ikaria.1.d: "A Greek revolt broke out on the island of Ikaria, one of the islands in the Aegean Sea. They drove out the Turkish garrison and seized control of the island. George N. Spanos, who was killed during a ambush attack by our troops, is hournored as the hero of the so-called Ikaria Revolution."
  ww1_ikaria.1.a: "Put them down!"
- ww1_ikaria.1.tt:0 "Modify[TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §R+100%§!\n"
+ ww1_ikaria.1.tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£political_violence_texticon  Resistance Target: §R+100%§!\n"
  ww1_ikaria.2.t: "Independent Greek State of Ikaria Acquired"
  ww1_ikaria.2.d: "Greeks on the island of Ikaria rebelled against Turkish rule. We are officially at war with the Turks, so we have to actively engage with the Greeks here, and they are willing to do the same."
  ww1_ikaria.2.a: "Wonderful reunion."
@@ -4375,11 +4375,11 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.104.t:0 "Unintended Consequences"
  ottoman.104.d:0 "As we've passed Temporary Law on Deportation, many Armenians within our empire has actively started resistance for their well being. As we were looking for a justification to defend our atrocities, this will be the perfect cover for our actions. As if we ever need to deny our actions in the future, we'll simply say "it never happened, but they deserved it."
  ottoman.104.a:0 "Now they definitely deserved it."
- ottoman.104.tt1:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+5.0%§!\n"
- ottoman.104.tt2:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
- ottoman.104.tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+15.0%§!\n"
- ottoman.104.tt4:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
- ottoman.104.tt5:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+25.0%§!\n"
+ ottoman.104.tt1:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+5.0%§!\n"
+ ottoman.104.tt2:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
+ ottoman.104.tt3:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+15.0%§!\n"
+ ottoman.104.tt4:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
+ ottoman.104.tt5:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+25.0%§!\n"
  ottoman.105.t:0 "Hafiz Hakkı Paşa Dies of Typhus"
  ottoman.105.d:0 "The most successful military graduate of his generation and a member of the House of Osman through marriage, His Highness Hafız Hakkı Paşa has passed away due to typhus. As he contracted it as he was commanding his armies on the Eastern Front, fighting against the enemy. Despite of all the measures and attempts, he could not have been recovered."
  ottoman.105.a:0 "Rest easy, paşam."
