--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4618,7 +4618,7 @@
  TUR_defense_of_trablusgarp:0 "Defense of Trablusgarp"
  TUR_defense_of_trablusgarp_desc:0 "Our last remaining territories in Africa, Trablusgarp, are being targeted by European colonial powers. While the region is sceptic to our rule, they're more than happy to side with us against the imperialists. By rallying the local population, we can increase our chances to defend Trablusgarp."
  TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+10%§!\n\n"
- TUR_increase_trablusgarp_centralization_15:0 "Modify §YCentralization§! of §YTrablusgarp Vilayet§! by §G+15%§!"
+ TUR_increase_trablusgarp_centralization_15:0 "Modify §YCentralization§! of §YTrablusgarp Vilayet§! by §G+15%§!\n"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
  TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-5.0%§!\n\n"
@@ -4629,19 +4629,19 @@
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
  TUR_increase_taxes_on_albanians_tt:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions."
- TUR_increase_kosova_centralization_10:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+10%§!"
- TUR_increase_manastir_centralization_5:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+5%§!"
- TUR_increase_yanya_centralization_10:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+10%§!"
- TUR_increase_iskodra_centralization_10:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+10%§!"
+ TUR_increase_kosova_centralization_10:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+10%§!\n"
+ TUR_increase_manastir_centralization_5:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+5%§!\n"
+ TUR_increase_yanya_centralization_10:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+10%§!\n"
+ TUR_increase_iskodra_centralization_10:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+10%§!\n"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
  TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
  TUR_centralize_albania_tt:0 "Unlocks £decision_icon_small  §YCentralize Albania§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
- TUR_increase_kosova_centralization_5:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+5%§!"
- TUR_increase_yanya_centralization_5:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+5%§!"
- TUR_increase_iskodra_centralization_5:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+5%§!"
+ TUR_increase_kosova_centralization_5:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+5%§!\n"
+ TUR_increase_yanya_centralization_5:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+5%§!\n"
+ TUR_increase_iskodra_centralization_5:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+5%§!\n"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
  TUR_albanian_vilayet_tt1:0 "Replace §Y£ww1_flag_ALB  Albanian Minority§! with £ww1_game_rule_flag_YUG §YSouth Slavic Minority§!\nEffective change:\n£manpower_texticon  Recruitable Population: §G+20.00%§!\n£political_violence_texticon  Resistance Target: §G-§![?847.TUR_ottoman_resistance_target|0%+]\n£political_violence_gain_texticon  Resistance Growth Speed: §G-§![?847.TUR_ottoman_resistance_growth|0%+]\n\n"
@@ -4671,7 +4671,7 @@
  TUR_OPDA_trigger_tooltip:0 "One of the following must be true:\n   Has indutrial concern §YOttoman Public Debt Administration§!\n   Has national spirit §YOttoman Public Debt§!"
  TUR_construct_hindiya_barrage:0 "Construct Hindiya Barrage"
  TUR_construct_hindiya_barrage_desc:0 "The Euphrates river gives us opportunities to construct renewable energy stations to use it to our advantage. Hindiya Barrage, a barrage that was proposed to be constructed in Euphrates, will help us with producing electricity."
- TUR_increase_baghdad_centralization_5:0 "Modify §YCentralization§! of §YBaghdad Vilayet§! by §G+5%§!"
+ TUR_increase_baghdad_centralization_5:0 "Modify §YCentralization§! of §YBaghdad Vilayet§! by §G+5%§!\n"
  TUR_form_turkish_petroleum_company:0 "Form Turkish Petroleum Company"
  TUR_form_turkish_petroleum_company_desc:0 "We can't let the foreigners drill our soil as they please. We must compete against them for the sovereignty over our own oil fields. By forming Turkish Petroleum Company, we can combat foreign domain our our oil fields."
  TUR_umur_u_nafia_muduriyet_i_umumiyesi:0 "Umur-u Nafia Müdüriyet-i Umumiyesi"
@@ -4909,33 +4909,19 @@
  TUR_one_language_one_religion_one_nation_desc:0 "As centuries old Millet System has proven itself to be ineffective in the 20th century while the Ottomanism dream being crushed with countless irredentist movements in the Balkans and our non-Muslim populaton, our empire should look at other European powers for inspiration. To create a successful contemporary unitary state, we must purge our state from its disloyal elements and effectively create a homogeneous nation with one language, one religion and one ethnicity."
  TUR_one_language_one_religion_one_nation_tt1:0 "£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
  TUR_one_language_one_religion_one_nation_tt2:0 "£ww1_flag_KUR  §YKurdish Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
- TUR_surpress_serb_irredentists:0 "Surpress Serb Irredentists"
- TUR_surpress_serb_irredentists_desc:0 "Due to the distance from the heart of our empire, Serbs in the North West of our empire has always enjoyed a status of lack of state control. By sending out our military forces to surpress Serb independists, we can ensure stability and loyalty in the territory."
- TUR_surpress_serb_irredentists_tt:0 "Unlocks £decision_icon_small  §YIncrease Pressure on Serbs§! Decisions."
- TUR_surpress_serb_irredentists_tt2:0 "Modify £ww1_flag_ALB §YAlbanian Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
  TUR_subdue_bulgarians:0 "Subdue Bulgarians"
  TUR_subdue_bulgarians_desc:0 "Several administrative reforms has worked towards reducing the tensions we faced by the Bulgarians, but it's not enough to fully integrate them. Through several new policies, and mechanisms to enforce them, we can continue integrating the Bulgarian population."
- TUR_subdue_bulgarians_tt:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
- TUR_subdue_bulgarians_tt1:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
- TUR_subdue_bulgarians_tt2:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
- TUR_subdue_bulgarians_tt3:0 "Unlocks £decision_icon_small  §YIncrease Pressure on Bulgarians§! Decisions."
- TUR_subdue_bulgarians_tt4:0 "Remove £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_loss_texticon  Resistance Decay Speed: [?451.TUR_subdue_bulgarians_TUR_ottoman_resistance_decay|=0%+]\n£garrison_texticon  Required Garrisons: [?451.TUR_subdue_bulgarians_TUR_ottoman_required_garrison_factor|=0%-]\n£manpower_texticon  Recruitable Population: [?451.TUR_subdue_bulgarians_TUR_ottoman_recruitable_population_factor|=2%+]\n"
- TUR_subdue_bulgarians_tt5:0 "Replace £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!  §YGreek Minority§! with £ww1_game_rule_flag_GRE  §YGreek Minority§!\nEffective change:\n£political_violence_loss_texticon  Resistance Decay Speed: [?757.TUR_subdue_bulgarians_TUR_ottoman_resistance_decay|=0%+]\n£garrison_texticon  Required Garrisons: [?757.TUR_subdue_bulgarians_TUR_ottoman_required_garrison_factor|=0%-]\n£manpower_texticon  Recruitable Population: [?757.TUR_displace_christians_from_economy_TUR_ottoman_recruitable_population_factor|=2%+]\n£construction_speed_texticon  Local Construction Speed: [?757.TUR_displace_christians_from_economy_TUR_ottoman_state_production_speed_buildings_factor|=0%+]\n"
- TUR_subdue_bulgarians_tt6:0 "Remove £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_loss_texticon  Resistance Decay Speed: [?757.TUR_subdue_bulgarians_TUR_ottoman_resistance_decay|=0%+]\n£garrison_texticon  Required Garrisons: [?757.TUR_subdue_bulgarians_TUR_ottoman_required_garrison_factor|=0%-]\n£manpower_texticon  Recruitable Population: [?757.TUR_subdue_bulgarians_TUR_ottoman_recruitable_population_factor|=2%+]\n"
+ TUR_subdue_bulgarians_tt:0 "Unlocks £decision_icon_small  §YIncrease Pressure on Bulgarians§! Decisions.\nThese decisions will allow us to reduce the effects of £political_violence_loss_texticon  §YResistance Decay Speed§! caused by £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! in §YEdirne Vilayet§!, §YSelanik Vilayet§! and §YManastır Vilayet§!.\n"
  TUR_destruction_of_the_thracian_bulgarians:0 "Destruction of the Thracian Bulgarians"
  TUR_destruction_of_the_thracian_bulgarians_desc:0 "Thrace still stands as a Turkish-majority region within our empire, with a large Bulgarian minority. As a part of our assimilationist policies envisioning the creation of an ethno-state, we can destroy the Bulgarian identity and presence in the region at large."
  TUR_destruction_of_the_thracian_bulgarians_tt:0 "Unlocks £decision_icon_small  §YDestroy Bulgarians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  TUR_exterminating_our_population:0 "Exterminating our Population"
+ TUR_surpress_serb_irredentists:0 "Surpress Serb Irredentists"
+ TUR_surpress_serb_irredentists_desc:0 "Due to the distance from the heart of our empire, Serbs in the North West of our empire has always enjoyed a status of lack of state control. By sending out our military forces to surpress Serb independists, we can ensure stability and loyalty in the territory."
+ TUR_surpress_serb_irredentists_tt:0 "Unlocks £decision_icon_small  §YIncrease Pressure on Serbs§! Decisions.\nThese decisions will allow us to reduce the effects of £political_violence_loss_texticon  §YResistance Decay Speed§! caused by £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! in §YKosova Vilayet§!.\n"
  TUR_displace_christians_from_economy:0 "Displace Christians from Economy"
  TUR_displace_christians_from_economy_dessc:0 "Before the creation of our empire, even before the migration of Turkic tribes, Greeks had already formed intrinsic trade connections in the region. Even though they've been living under our rule for centuries, they still retained these connections. As this contradicts with our centralization policies, we'll work towards the displacement of Christian minorities from the economy."
- TUR_displace_christians_from_economy_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
- TUR_displace_christians_from_economy_tt1:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
- TUR_displace_christians_from_economy_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
- TUR_displace_christians_from_economy_tt3:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
- TUR_displace_christians_from_economy_tt4:0 "Unlocks £decision_icon_small  §YNationalize Greek Businesses§! Decisions."
- TUR_displace_christians_from_economy_tt5:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Local Factories: §G+3%§!\n£construction_speed_texticon  Local Construction Speed: §R-1%§!\n\n"
- TUR_displace_christians_from_economy_tt6:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£civ_factory  Local Factories: §G+3%§!\n£construction_speed_texticon  Local Construction Speed: §R-1%§!\n\n"
- TUR_displace_christians_from_economy_tt7:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£civ_factory  Local Factories: §G+3%§!\n£construction_speed_texticon  Local Construction Speed: §R-1%§!\n\n"
+ TUR_displace_christians_from_economy_tt:0 "Unlocks £decision_icon_small  §YNationalize Greek Businesses§! Decisions. These decisions will allow us to reduce the effects of £civ_factory  §YLocal Factories§! caused by £ww1_game_rule_flag_GRE  §YGreek Minority§! in states with §YTurkish Population§!.This decision can be retaken depending on the magnitude of §YTurkish Population§! in the region.\n\n"
  TUR_greek_deportations:0 "Greek Deportations"
  TUR_greek_deportations_desc:0 "Our Balkan holdings as well as Western Anatolia and Pontus has large Greek minority groups living for centuries, even before our arrival. Yet these minorities conflict with our interests of forming a nation state and an empire purely inhabited by Turks. By deporting them from their villages and giving their properties our Turkish population, we can easily eliminate the Greek presence."
  TUR_greek_deportations_tt:0 "Unlocks £decision_icon_small  §YDeport Greeks§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
