--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -713,7 +713,7 @@
  TUR_semi_autonomous_vilayet_desc:0 "Semi-autonomous vilayets partly restrict our access to the states factories and resources yet provides us with slightly increased local compliance and stability."
  TUR_martial_law:0 "Martial Law"
  TUR_martial_law_desc:0 "This state is currently under martial law. Apart from maintaining public order, the state of martial law also allows us to surpress political enemies and implement laws faster."
- TUR_martial_law_tt:0 "Occupation law §YMartial Law§! could be assigned to state.\n"
+ TUR_martial_law_tt:0 "Occupation law §YMartial Law§! can be assigned to state.\n"
 
  TUR_islamic_economics_idea:0 "Halal Economics"
  TUR_islamic_relief_centers_idea:0 "Islamic Relief Centers"
